--- a/app/src/main/res/layout/activity_study_layout.xml
+++ b/app/src/main/res/layout/activity_study_layout.xml
@@ -35,7 +35,8 @@
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/mybutton"
+                app:backgroundTint="@null"
+                android:background="@drawable/custom_selector"
                 android:text="Left" />
 
             <Button
@@ -62,7 +63,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/mybutton"
+                app:backgroundTint="@null"
+                android:background="@drawable/custom_selector"
                 android:text="Next" />
         </LinearLayout>
 
