--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginBottom="20dp"
-            android:layout_weight="6"
-            android:src="@drawable/alphabet" />
+            android:layout_weight="4"
+            android:src="@drawable/logo" />
 
 
         <Button
@@ -43,11 +43,13 @@
             android:layout_marginEnd="10dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="10dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:background="@drawable/custom_selector"
-            android:textSize="16dp"
+            android:fontFamily="@font/comfortaa"
             android:text="@string/activity_main_learn_characters"
             android:textColor="#FFF"
+            android:textAllCaps="false"
+            android:textSize="16dp"
             app:backgroundTint="@null" />
 
         <Button
@@ -62,10 +64,12 @@
             android:layout_marginEnd="10dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="10dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:background="@drawable/custom_selector"
-            android:textSize="16dp"
+            android:fontFamily="@font/comfortaa"
             android:text="@string/activity_main_test"
+            android:textAllCaps="false"
+            android:textSize="16dp"
             app:backgroundTint="@null" />
 
     </LinearLayout>
