--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,10 +10,11 @@
     <color name="colorPrimary">#d81b60</color>
     <color name="colorPrimaryDark">#a00037</color>
     <color name="colorPrimaryLight">#ff5c8d</color>
-    <color name="colorAccent">#1e88e5</color>
+    <color name="colorAccent">#A965FF</color>
     <color name="colorAccentDark">#005cb2</color>
-    <color name="colorAccentLight">#6ab7ff</color>
+    <color name="colorAccentLight">#D1A3FF</color>
     <color name="colorOnPrimary">@color/white</color>
     <color name="white_2">#33FFFFFF</color>
     <color name="colorRipple">@color/white_2</color>
+    <color name="background">#F2F3F7</color>
 </resources>
