--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,87 +7,87 @@
     android:background="@color/background"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="32dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="184dp"
-            android:fontFamily="@font/comfortaa"
-            android:gravity="center"
-            android:text="@string/activity_main_header"
-            android:textColor="#000000"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="match_parent"
-            android:layout_height="218dp"
-            app:srcCompat="@drawable/logo" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="200dp"
-        android:orientation="vertical"
+    <Button
+        android:id="@+id/button11"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_selector"
+        android:fontFamily="@font/comfortaa"
+        android:text="@string/activity_main_learn_characters"
+        android:textAllCaps="false"
+        android:textColor="#FFF"
+        android:textSize="14dp"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.39">
+        app:layout_constraintVertical_bias="0.686"
+        app:layout_constraintVertical_chainStyle="packed" />
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/button12"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_selector"
+        android:fontFamily="@font/comfortaa"
+        android:text="@string/activity_main_about"
+        android:textAllCaps="false"
+        android:textColor="#FFF"
+        android:textSize="14dp"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.871" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="500dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent">
+    <Button
+        android:id="@+id/button13"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_selector"
+        android:fontFamily="@font/comfortaa"
+        android:text="@string/activity_main_exercise"
+        android:textAllCaps="false"
+        android:textColor="#FFF"
+        android:textSize="14dp"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.78" />
 
-        <Button
-            android:id="@+id/button11"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/custom_selector"
-            android:fontFamily="@font/comfortaa"
-            android:text="@string/activity_main_learn_characters"
-            android:textAllCaps="false"
-            android:textColor="#FFF"
-            android:textSize="16dp"
-            app:backgroundTint="@null" />
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="356dp"
+        android:layout_height="196dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.442"
+        app:srcCompat="@drawable/logo" />
 
-        <Button
-            android:id="@+id/button12"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/custom_selector"
-            android:fontFamily="@font/comfortaa"
-            android:text="@string/activity_main_exercise"
-            android:textAllCaps="false"
-            android:textColor="#FFF"
-            android:textSize="16dp"
-            app:backgroundTint="@null" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="128dp"
+        android:fontFamily="@font/comfortaa"
+        android:text="@string/activity_main_header"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/imageView1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
-        <Button
-            android:id="@+id/button13"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|center_horizontal"
-            android:background="@drawable/custom_selector"
-            android:fontFamily="@font/comfortaa"
-            android:text="@string/activity_main_exercise_new"
-            android:textAllCaps="false"
-            android:textColor="#FFF"
-            android:textSize="16dp"
-            app:backgroundTint="@null" />
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
