--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -88,8 +88,8 @@
 
     <Button
         android:id="@+id/buttonPlay"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="57dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="-85dp"
         android:adjustViewBounds="true"
