--- a/app/src/main/res/layout-land/activity_results_layout.xml
+++ b/app/src/main/res/layout-land/activity_results_layout.xml
@@ -13,39 +13,40 @@
         android:layout_height="33dp"
         android:layout_marginEnd="300dp"
         android:fontFamily="@font/comfortaa"
-        android:text="Score 0 /  26"
+        android:text="Score 00 /  26"
         android:textAllCaps="false"
         android:textColor="#000"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.714" />
+        app:layout_constraintVertical_bias="0.671" />
 
     <ImageView
         android:id="@+id/imageViewStar"
         android:layout_width="274dp"
         android:layout_height="77dp"
-        app:layout_constraintBottom_toTopOf="@+id/textViewResultCor"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.734"
+        app:layout_constraintVertical_bias="0.395"
         app:srcCompat="@drawable/stars" />
 
     <TextView
         android:id="@+id/textViewHome"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="96dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="28dp"
         android:drawableLeft="@drawable/home"
         android:drawablePadding="15dp"
         android:fontFamily="@font/comfortaa"
-        android:maxLines="1"
+        android:gravity="center"
+        android:maxLines="2"
         android:text="На главную"
-        android:textSize="16dp"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/imageViewStar"
         app:layout_constraintStart_toStartOf="parent"
