--- a/app/src/main/res/layout/activity_results_layout.xml
+++ b/app/src/main/res/layout/activity_results_layout.xml
@@ -34,6 +34,22 @@
         app:layout_constraintVertical_bias="0.699"
         app:srcCompat="@drawable/stars" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView"
+        android:layout_width="274dp"
+        android:layout_height="274dp"
+        android:foregroundGravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.282"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/confetti" />
+
     <TextView
         android:id="@+id/textViewHome"
         android:layout_width="wrap_content"
