--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,6 +73,21 @@
         app:layout_constraintVertical_bias="0.442"
         app:srcCompat="@drawable/logo" />
 
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/clock"
+        android:layout_width="74dp"
+        android:layout_height="75dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.057"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/clock" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
